y.output
Terminals which are not used

   ERRO


Grammar

    0 $accept: Vendas $end

    1 Vendas: STOCK Stock Faturas

    2 Stock: Entrada
    3      | Stock ';' Entrada

    4 Entrada: RefProd '-' Desc '-' ValUnit '-' Quant

    5 Faturas: Fatura
    6        | Faturas Fatura

    7 Fatura: FATURA Cabec VENDAS Corpo

    8 Cabec: IdFat IdForn CLIENTE IdClie

    9 IdFat: id

   10 IdForn: Nome Morada NIF2P NIF NIB2P NIB

   11 IdClie: Nome Morada NIF2P NIF

   12 Nome: str

   13 NIF: str

   14 Morada: str

   15 NIB: str

   16 Corpo: Linha '.'
   17      | Corpo Linha '.'

   18 Linha: RefProd '|' Quant

   19 RefProd: id

   20 Desc: str

   21 ValUnit: num

   22 Quant: num


Terminals, with rules where they appear

$end (0) 0
'-' (45) 4
'.' (46) 16 17
';' (59) 3
'|' (124) 18
error (256)
ERRO (258)
id (259) 9 19
str (260) 12 13 14 15 20
num (261) 21 22
STOCK (262) 1
FATURA (263) 7
VENDAS (264) 7
NIF2P (265) 10 11
NIB2P (266) 10
CLIENTE (267) 8


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
Vendas (18)
    on left: 1, on right: 0
Stock (19)
    on left: 2 3, on right: 1 3
Entrada (20)
    on left: 4, on right: 2 3
Faturas (21)
    on left: 5 6, on right: 1 6
Fatura (22)
    on left: 7, on right: 5 6
Cabec (23)
    on left: 8, on right: 7
IdFat (24)
    on left: 9, on right: 8
IdForn (25)
    on left: 10, on right: 8
IdClie (26)
    on left: 11, on right: 8
Nome (27)
    on left: 12, on right: 10 11
NIF (28)
    on left: 13, on right: 10 11
Morada (29)
    on left: 14, on right: 10 11
NIB (30)
    on left: 15, on right: 10
Corpo (31)
    on left: 16 17, on right: 7 17
Linha (32)
    on left: 18, on right: 16 17
RefProd (33)
    on left: 19, on right: 4 18
Desc (34)
    on left: 20, on right: 4
ValUnit (35)
    on left: 21, on right: 4
Quant (36)
    on left: 22, on right: 4 18


state 0

    0 $accept: . Vendas $end

    STOCK  shift, and go to state 1

    Vendas  go to state 2


state 1

    1 Vendas: STOCK . Stock Faturas

    id  shift, and go to state 3

    Stock    go to state 4
    Entrada  go to state 5
    RefProd  go to state 6


state 2

    0 $accept: Vendas . $end

    $end  shift, and go to state 7


state 3

   19 RefProd: id .

    $default  reduce using rule 19 (RefProd)


state 4

    1 Vendas: STOCK Stock . Faturas
    3 Stock: Stock . ';' Entrada

    FATURA  shift, and go to state 8
    ';'     shift, and go to state 9

    Faturas  go to state 10
    Fatura   go to state 11


state 5

    2 Stock: Entrada .

    $default  reduce using rule 2 (Stock)


state 6

    4 Entrada: RefProd . '-' Desc '-' ValUnit '-' Quant

    '-'  shift, and go to state 12


state 7

    0 $accept: Vendas $end .

    $default  accept


state 8

    7 Fatura: FATURA . Cabec VENDAS Corpo

    id  shift, and go to state 13

    Cabec  go to state 14
    IdFat  go to state 15


state 9

    3 Stock: Stock ';' . Entrada

    id  shift, and go to state 3

    Entrada  go to state 16
    RefProd  go to state 6


state 10

    1 Vendas: STOCK Stock Faturas .
    6 Faturas: Faturas . Fatura

    FATURA  shift, and go to state 8

    $default  reduce using rule 1 (Vendas)

    Fatura  go to state 17


state 11

    5 Faturas: Fatura .

    $default  reduce using rule 5 (Faturas)


state 12

    4 Entrada: RefProd '-' . Desc '-' ValUnit '-' Quant

    str  shift, and go to state 18

    Desc  go to state 19


state 13

    9 IdFat: id .

    $default  reduce using rule 9 (IdFat)


state 14

    7 Fatura: FATURA Cabec . VENDAS Corpo

    VENDAS  shift, and go to state 20


state 15

    8 Cabec: IdFat . IdForn CLIENTE IdClie

    str  shift, and go to state 21

    IdForn  go to state 22
    Nome    go to state 23


state 16

    3 Stock: Stock ';' Entrada .

    $default  reduce using rule 3 (Stock)


state 17

    6 Faturas: Faturas Fatura .

    $default  reduce using rule 6 (Faturas)


state 18

   20 Desc: str .

    $default  reduce using rule 20 (Desc)


state 19

    4 Entrada: RefProd '-' Desc . '-' ValUnit '-' Quant

    '-'  shift, and go to state 24


state 20

    7 Fatura: FATURA Cabec VENDAS . Corpo

    id  shift, and go to state 3

    Corpo    go to state 25
    Linha    go to state 26
    RefProd  go to state 27


state 21

   12 Nome: str .

    $default  reduce using rule 12 (Nome)


state 22

    8 Cabec: IdFat IdForn . CLIENTE IdClie

    CLIENTE  shift, and go to state 28


state 23

   10 IdForn: Nome . Morada NIF2P NIF NIB2P NIB

    str  shift, and go to state 29

    Morada  go to state 30


state 24

    4 Entrada: RefProd '-' Desc '-' . ValUnit '-' Quant

    num  shift, and go to state 31

    ValUnit  go to state 32


state 25

    7 Fatura: FATURA Cabec VENDAS Corpo .
   17 Corpo: Corpo . Linha '.'

    id  shift, and go to state 3

    $default  reduce using rule 7 (Fatura)

    Linha    go to state 33
    RefProd  go to state 27


state 26

   16 Corpo: Linha . '.'

    '.'  shift, and go to state 34


state 27

   18 Linha: RefProd . '|' Quant

    '|'  shift, and go to state 35


state 28

    8 Cabec: IdFat IdForn CLIENTE . IdClie

    str  shift, and go to state 21

    IdClie  go to state 36
    Nome    go to state 37


state 29

   14 Morada: str .

    $default  reduce using rule 14 (Morada)


state 30

   10 IdForn: Nome Morada . NIF2P NIF NIB2P NIB

    NIF2P  shift, and go to state 38


state 31

   21 ValUnit: num .

    $default  reduce using rule 21 (ValUnit)


state 32

    4 Entrada: RefProd '-' Desc '-' ValUnit . '-' Quant

    '-'  shift, and go to state 39


state 33

   17 Corpo: Corpo Linha . '.'

    '.'  shift, and go to state 40


state 34

   16 Corpo: Linha '.' .

    $default  reduce using rule 16 (Corpo)


state 35

   18 Linha: RefProd '|' . Quant

    num  shift, and go to state 41

    Quant  go to state 42


state 36

    8 Cabec: IdFat IdForn CLIENTE IdClie .

    $default  reduce using rule 8 (Cabec)


state 37

   11 IdClie: Nome . Morada NIF2P NIF

    str  shift, and go to state 29

    Morada  go to state 43


state 38

   10 IdForn: Nome Morada NIF2P . NIF NIB2P NIB

    str  shift, and go to state 44

    NIF  go to state 45


state 39

    4 Entrada: RefProd '-' Desc '-' ValUnit '-' . Quant

    num  shift, and go to state 41

    Quant  go to state 46


state 40

   17 Corpo: Corpo Linha '.' .

    $default  reduce using rule 17 (Corpo)


state 41

   22 Quant: num .

    $default  reduce using rule 22 (Quant)


state 42

   18 Linha: RefProd '|' Quant .

    $default  reduce using rule 18 (Linha)


state 43

   11 IdClie: Nome Morada . NIF2P NIF

    NIF2P  shift, and go to state 47


state 44

   13 NIF: str .

    $default  reduce using rule 13 (NIF)


state 45

   10 IdForn: Nome Morada NIF2P NIF . NIB2P NIB

    NIB2P  shift, and go to state 48


state 46

    4 Entrada: RefProd '-' Desc '-' ValUnit '-' Quant .

    $default  reduce using rule 4 (Entrada)


state 47

   11 IdClie: Nome Morada NIF2P . NIF

    str  shift, and go to state 44

    NIF  go to state 49


state 48

   10 IdForn: Nome Morada NIF2P NIF NIB2P . NIB

    str  shift, and go to state 50

    NIB  go to state 51


state 49

   11 IdClie: Nome Morada NIF2P NIF .

    $default  reduce using rule 11 (IdClie)


state 50

   15 NIB: str .

    $default  reduce using rule 15 (NIB)


state 51

   10 IdForn: Nome Morada NIF2P NIF NIB2P NIB .

    $default  reduce using rule 10 (IdForn)
